--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.4",
@@ -40,11 +40,14 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.5.3",
+    "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.0",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
